<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="indalosoftworks.spendtracker.AddNewEnvelopeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_edit_title"
        android:id="@+id/txt_edit_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_envelope_name"
        android:hint="@string/str_hint_envelope"
        android:layout_below="@+id/txt_edit_title"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/input_budget_amount"
        android:hint="@string/str_hint_weeklyamount"
        android:layout_below="@+id/input_envelope_name"
        android:layout_toStartOf="@+id/txt_edit_title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/input_budget_amount"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_str_cancel"
            android:id="@+id/btn_cancel" />

        <Button
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_str_done"
            android:id="@+id/btn_done" />
    </LinearLayout>

</RelativeLayout>
